# crack-extract

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/glass/: input.txt
example/mode1/: input.txt
example/mode3/: input.txt
include/crackExtraction/: damageGradient.h  extractCrack.h  object.h  particles.h  utils.h
include/mpm-fracture/: damageGradient.h  extractCrack.h  grid.h  mpm-fracture.h  mpm.h  mpm_utils.h  object.h  params.h  polygon_triangulate.hpp  utils.h  weights.h
src/: damageGradient.cpp  extractCrack.cpp  main.cpp  mpm.cpp  particles.cpp  polygon_triangulate.cpp  rigid-body-object.cpp  utility-functions.cpp  weights.cpp
